src/app/dashboard/components/app-list/app-list.component.scss
.app-grid {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  justify-content: center;
  align-items: center;

  width: 1600px;
  margin: 0 auto;

  padding-top: 24px;
}

.card {
  cursor: pointer;
  flex: 1 0 30%;
  max-width: 33%;
  height: 320px;
  .card-content {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

/*::ng-deep {
  .loading-div {
    position: relative !important;
    transform: translate(-50%, 0) !important;
  }
}*/

@media screen and (max-width: 1624px) {
  .app-grid {
    width: 100%;
  }
}

